--- a/Drip/Components/OperationTypeTag.razor
+++ b/Drip/Components/OperationTypeTag.razor
@@ -2,7 +2,7 @@
 @using Microsoft.OpenApi.Models
 
 <span class="tag @OperationType @OperationType.ToString().ToLower()">
-    @OperationType.GetDisplayName()
+    @(OperationType == OperationType.Delete ? "DEL" : OperationType.GetDisplayName())
 </span>
 
 @code {
